tdf#120784 KDE5: Process "Enter" key from numpad like normal "Enter" key

Change-Id: Id4a721aa30e92a9396f93342cf42d5790207bb89
Reviewed-on: https://gerrit.libreoffice.org/63095
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
Tested-by: Katarina Behrens <Katarina.Behrens@cib.de>